# context-engineering-intro

./: .gitignore  .mcp.json  CLAUDE.md  GEMINI.md
projects/quant_trading/: .gitignore  CODEBASE_VALIDATION_EVIDENCE_REPORT.md  COMPACT_CONTINUATION_CONTEXT.md  COMPREHENSIVE_MULTIDIMENSIONAL_VALIDATION_REPORT.md  DEVELOPMENT_STATUS.md  ENHANCED_TEMPORAL_CODEBASE_VALIDATION_REPORT.md  complete_integration_results.json  debug_funding_detailed.py  forensic_reconstruction_report.md  genetic_seed_validation_report.md  planning_prp.md  pyproject.toml  pytest.ini  requirements.txt  test_order_management_research.py  validate_ml_seeds_data_requirements.py  validation_results.json  vision.md
projects/quant_trading/_audit_artifacts/: .env.audit  .github_workflows_audit.yml  Taskfile.yml  audit_report.md  audit_scope.yaml  callsites.json  capability_map.json  capability_map.yaml  ci_invocations.jsonl  classification_summary.md  cleanup_completion_record.md  container_digest.txt  contract_tests.yml  dup_candidates.csv  env_snapshot.json  execution_graph.json  explicit_entrypoints.json  file_types_raw.txt  golden_artifacts.json  graph_ascii.txt  graph_mermaid.md  infra_invocations.json  integration_edges.csv  io_contracts.json  lineage_report.json  orchestrator_dryrun.jsonl  probe_results.jsonl  probe_summary.json  risk_register.csv  runtime_manifest.json  safety_policy.md  signoff_record.md  tree_manifest.json  wrappers_map.json
projects/quant_trading/_audit_artifacts/help_texts/: scripts_help_collection.txt  validate_complete_system_help.txt
projects/quant_trading/config/: decision_rules.json
projects/quant_trading/docker/genetic-pool/: Dockerfile
projects/quant_trading/docs/development/: AGENTIC_CODING_CONSTRAINTS.md  ANTI_HALLUCINATION_DEVELOPMENT_PROTOCOL.md  ANTI_HALLUCINATION_IMPLEMENTATION_PATTERNS.md  RESEARCH_TO_CODE_ALIGNMENT_MAP.md  SYSTEMATIC_INTERFACE_DOCUMENTATION.md
projects/quant_trading/docs/infrastructure/: PHASE_5B5_INFRASTRUCTURE_ARCHITECTURE.md  file_systematization_implementation.md  systematic_development_workflow_guide.md
projects/quant_trading/docs/planning/: legacy_testing_strategy.md  methodology_compliance_checklist.md  planning_prp_systematic.md
projects/quant_trading/docs/reports/: codefarm_systematization_analysis_report.md
projects/quant_trading/examples/: correlation_demo.py
projects/quant_trading/infrastructure/core/: config_manager.py  deployment_interface.py  monitoring_interface.py
projects/quant_trading/phases/completed/: automated_decision_engine_implementation_plan.md  config_driven_strategy_loader_implementation_plan.md  market_regime_detection_enhancement_plan.md  neon_cloud_database_integration_plan.md  phase3_architectural_violation_remediation_plan.md  ultra_compressed_evolution_implementation_plan.md
projects/quant_trading/phases/current/: IMPLEMENTATION_ROADMAP.md  PHASE4_COMPLETION_REPORT.md  automated_decision_engine_implementation_plan.md  config_driven_strategy_loader_implementation_plan.md  cross_asset_correlation_integration_plan.md  market_regime_detection_enhancement_plan.md  neon_cloud_database_integration_plan.md  phase4_system_architecture_remediation_plan.md  phase5_genetic_algorithm_production_hardening.md  phase5a_execution_graph_consolidation.md  phase5b_production_deployment.md  phase5c_performance_optimization.md  phase5d_codebase_cleanup.md  phase5e_simplified_trading_loop.md  phase6_monte_carlo_robustness_implementation.md  ray_cluster_scaling_implementation_plan.md  ultra_compressed_evolution_implementation_plan.md
projects/quant_trading/research/: 00_IMPLEMENTATION_ROADMAP.md  phase4_comprehensive_research_summary.md  research_comparison_analysis.md  research_complete.md
projects/quant_trading/research/aiofiles_v3/: execution_report_v3.md  vector2_api_specs.md
projects/quant_trading/research/asyncio_advanced/: page_2_queues_producer_consumer.md
projects/quant_trading/research/asyncpg/: 01_usage_connection_pools.md  02_api_reference_connection.md  (+1 more)
projects/quant_trading/scripts/: __init__.py
projects/quant_trading/tests/: __init__.py  test_genetic_strategy_pool.py
projects/quant_trading/verified_docs/: verification_index.md
(+579 files in other folders)
